--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <main>
-        <form action="#" method="POST" class="hugesearch-form">
+        <form class="search" action="#" method="POST" class="hugesearch-form">
             <input class="hugesearch-form-input" type="search" placeholder="Search...">
-            <button class="hugesearch-form-submit" type="submit"></button>
+            <button class="hugesearch-form-submit" type="submit">Submit</button>
         </form>
         <div class="row mainBlock">
             <div class="col-4">
