--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bootstrap-grid.css">
     <link rel="stylesheet" href="../css/ctyle.css">
     <title>Document</title>
-    <link rel="icon" type="image/png" href="/img/favicon.png">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <![endif]-->
@@ -26,37 +26,37 @@
                 <ul class="hugesearch-list">
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/SaraSoueidan.jpeg" alt="Sara Soueidan">
+                            <img class="circle" src="../img/avatars/SaraSoueidan.jpeg" alt="Sara Soueidan">
                             <p>Sara Soueidan</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/RachelSmith.png" alt="Rachel Smith">
+                            <img class="circle" src="../img/avatars/RachelSmith.png" alt="Rachel Smith">
                             <p>Rachel Smith</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/PeterFinlan.jpeg" alt="Peter Finlan">
+                            <img class="circle" src="../img/avatars/PeterFinlan.jpeg" alt="Peter Finlan">
                             <p>Peter Finlan</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/PatrickCox.png" alt="Patrick Cox">
+                            <img class="circle" src="../img/avatars/PatrickCox.png" alt="Patrick Cox">
                             <p>Patrick Cox</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/TimHolman.jpeg" alt="Tim Holman">
+                            <img class="circle" src="../img/avatars/TimHolman.jpeg" alt="Tim Holman">
                             <p>Tim Holman</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/avatars/ShaunDona.jpeg" alt="Shaun Dona">
+                            <img class="circle" src="../img/avatars/ShaunDona.jpeg" alt="Shaun Dona">
                             <p>Shaun Dona</p>
                         </a>
                     </li>
@@ -67,39 +67,40 @@
                 <ul class="hugesearch-list">
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/PagePreloadingEffect.png" alt="Page Preloading Effect">
+                            <img class="circle" src="../img/thumbs/PagePreloadingEffect.png"
+                                alt="Page Preloading Effect">
                             <p>Page Preloading Effect</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/ArrowNavigationStyles.png"
+                            <img class="circle" src="../img/thumbs/ArrowNavigationStyles.png"
                                 alt="Arrow Navigation Styles">
                             <p>Arrow Navigation Styles</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/HoverEffectsIdeasNew.png"
+                            <img class="circle" src="../img/thumbs/HoverEffectsIdeasNew.png"
                                 alt="Hover Effects Ideas New">
                             <p>Hover Effects Ideas New</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/FreebieHalcyonDays.png" alt="Freebie Halcyon Days">
+                            <img class="circle" src="../img/thumbs/FreebieHalcyonDays.png" alt="Freebie Halcyon Days">
                             <p>Freebie Halcyon Days</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/ArticleIntroEffects.png" alt="Article Intro Effects">
+                            <img class="circle" src="../img/thumbs/ArticleIntroEffects.png" alt="Article Intro Effects">
                             <p>Article Intro Effects</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/DraggableDualViewSlideshow.png"
+                            <img class="circle" src="../img/thumbs/DraggableDualViewSlideshow.png"
                                 alt="Draggable Dual View Slideshow">
                             <p>Draggable Dual View Slideshow</p>
                         </a>
@@ -111,39 +112,39 @@
                 <ul class="hugesearch-list">
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/TooltipStylesInspiration.png"
+                            <img class="circle" src="../img/thumbs/TooltipStylesInspiration.png"
                                 alt="Tooltip Styles Inspiration">
                             <p>Tooltip Styles Inspiration</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/AnimatedHeaderBackgrounds.png"
+                            <img class="circle" src="../img/thumbs/AnimatedHeaderBackgrounds.png"
                                 alt="Animated Header Backgrounds">
                             <p>Animated Header Backgrounds</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/OffCanvas.png" alt="Off Canvas">
+                            <img class="circle" src="../img/thumbs/OffCanvas.png" alt="Off Canvas">
                             <p>Off Canvas</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/TabStyles.png" alt="Tab Styles">
+                            <img class="circle" src="../img/thumbs/TabStyles.png" alt="Tab Styles">
                             <p>Tab Styles</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/ResponsiveSVGs.png" alt="Responsive SVGs">
+                            <img class="circle" src="../img/thumbs/ResponsiveSVGs.png" alt="Responsive SVGs">
                             <p>Responsive SVGs</p>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank">
-                            <img class="circle" src="/img/thumbs/NotificationStyles.png" alt="Notification Styles">
+                            <img class="circle" src="../img/thumbs/NotificationStyles.png" alt="Notification Styles">
                             <p>Notification Styles</p>
                         </a>
                     </li>
